ICE-8933 fix for 'ace:menuItem - mouse pointer changes to I-bar (text edit) when hovered over label on IE 7/8'

--- a/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/wijmo/wijmo.css
+++ b/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/wijmo/wijmo.css
@@ -420,3 +420,7 @@ float:right;
 	margin: 0;
 	padding: 0;
 }
+
+.wijmo-wijmenu-text {
+	cursor:pointer;
+}
